atlanta.net (archived on 2004-12-07)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 6005,
  "classifier_probability": 0.92,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.37,
  "homepage_snapshot_redirected_domain": "atlanta.net",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20040929082522id_/http://www.atlanta.net/",
  "homepage_snapshot_url": "https://web.archive.org/web/20040929082522id_/http%3A//atlanta.net",
  "interval": "2004_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "atlanta.net",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041207215040id_/http%3A//www.atlanta.net/acvb/privacy.asp",
  "policy_title": "Atlanta.net - The Official Travel Portal of Atlanta",
  "policy_url": "atlanta.net/acvb/privacy.asp",
  "sha1": "f35bf368ae1ccb09ffd2e3caad5b0861d548c3cc",
  "simhash": 10692964573249965758,
  "simhash_updated": false,
  "site_hostname": "atlanta.net",
  "site_url": "http://atlanta.net",
  "smog": 16.16,
  "strict_updated": false,
  "timestamp": "20041207215040",
  "word_count": 951,
  "year": 2004
}

--- a/a/at/atl/atlanta.net.html
+++ b/a/at/atl/atlanta.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the atlanta.net privacy policy that was archived on 2004-06-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040604063408id_/http%3A//www.atlanta.net/acvb/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the atlanta.net privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207215040id_/http%3A//www.atlanta.net/acvb/privacy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><!-- InstanceBegin template="/Templates/acvb.dwt" codeOutsideHTMLIsLocked="false" --><head>
 <!-- InstanceBeginEditable name="doctitle" -->
@@ -41,7 +41,7 @@ function MM_preloadImages() { //v3.0
 //-->
 </script></head>
 
-<body bgcolor="F2F2F2" marginwidth="0" marginheight="0" leftmargin="0" topmargin="0" onload="MM_preloadImages('../media/images/buttonV_over.gif','../media/images/buttonMP_over.gif','../media/images/buttonOPR_over.gif','../media/images/buttonMH_over.gif','../media/images/buttonACVB_over.gif','media/images/button1_f2.gif','media/images/button2_f2.gif','media/images/button3_f2.gif','media/images/button4_f2.gif','media/images/button5_f2.gif','media/images/button6_f2.gif','media/images/button7_f2.gif','media/images/buttonTTI_over.gif','media/images/button_partners2.gif','media/images/button_employment2.gif','media/images/button_directions2.gif','../media/images/buttonS_over.gif')">
+<body bgcolor="F2F2F2" marginwidth="0" marginheight="0" leftmargin="0" topmargin="0" onload="MM_preloadImages('../media/images/buttonV_over.gif','../media/images/buttonMP_over.gif','../media/images/buttonOPR_over.gif','../media/images/buttonMH_over.gif','../media/images/buttonACVB_over.gif','media/images/button1_f2.gif','media/images/button5_f2.gif','media/images/button7_f2.gif','media/images/buttonTTI_over.gif','media/images/button_employment2.gif','../media/images/buttonS_over.gif','media/images/button3_f2.gif','media/images/button_partners2.gif','media/images/button_directions2.gif','media/images/button6_f2.gif','media/images/button4_f2.gif','media/images/button2_f2.gif')">
 <!-- Search Engine Text -->
 <!-- #BeginEditable "top_copy" -->
 <table width="775" border="0" cellspacing="0" cellpadding="0">
@@ -66,7 +66,7 @@ function MM_preloadImages() { //v3.0
 <!-- Header -->
 <table width="775" bgcolor="#FFFFFF" border="0" cellpadding="0" cellspacing="0">
   <tbody><tr> 
-    <td width="274" valign="bottom">      <img src="../media/images/headerLogo_small.gif" width="217" height="61"><a href="http://www.atlanta.net/acvb/corporate.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image111','','../media/images/buttonS_over.gif',1)"><img src="../media/images/buttonS.gif" name="Image111" width="57" height="61" border="0"></a></td>
+    <td width="274" valign="bottom">      <a href="http://www.atlanta.net"><img src="../media/images/headerLogo_small.gif" width="217" height="61" border="0"></a><a href="http://www.atlanta.net/acvb/corporate.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image111','','../media/images/buttonS_over.gif',1)"><img src="../media/images/buttonS.gif" name="Image111" width="57" height="61" border="0"></a></td>
    <td width="501">
    <table border="0" cellpadding="0" cellspacing="0" width="501">
 	  <tbody><tr>
@@ -79,8 +79,8 @@ function MM_preloadImages() { //v3.0
     <td width="5" valign="top"><img src="../media/images/clear.gif" width="5" height="1" border="0"></td>
     <td width="100%" height="30" class="content9ptDrkGrey">Status: <span class="content9ptOrange">Not 
       Logged-in</span><br>
-      <a href="http://216.58.161.88/atlanta/atlantaknowme/registration.asp" class="link9ptDrkGrey" target="_top">Register.</a> 
-      Click here to <a href="http://216.58.161.88/atlanta/atlantaknowme/loginuser.asp" class="link9ptDrkGrey" target="_top">Log-in</a></td>
+      <a href="http://www.knowsme.com/atlanta/atlantaknowme/registration.asp" class="link9ptDrkGrey" target="_top">Register.</a> 
+      Click here to <a href="http://www.knowsme.com/atlanta/atlantaknowme/loginuser.asp" class="link9ptDrkGrey" target="_top">Log-in</a></td>
     <td width="5" valign="top"><img src="../media/images/clear.gif" width="5" height="1" border="0"></td>
   </tr>
   <tr> 
@@ -106,12 +106,12 @@ function MM_preloadImages() { //v3.0
 		   <td><a href="../tourtravel/index.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('buttonTTI','','../media/images/buttonTTI_over.gif',1);"><img name="buttonTTI" src="../media/images/buttonTTI.gif" width="105" height="19" border="0" alt=""></a></td>
 		   <td><a href="index.asp"><img name="buttonACVB" src="../media/images/buttonACVB_over.gif" width="74" height="19" border="0" alt=""></a></td>
 		  </tr>
-		</tbody></table>
+	   </tbody></table>
 		<!-- Buttons -->
-		</td>
+	  </td>
 	  </tr>
-	</tbody></table>
-	</td>
+   </tbody></table>
+  </td>
   </tr>
 </tbody></table>
 <!-- Header -->
@@ -151,32 +151,32 @@ function MM_preloadImages() { //v3.0
         <tbody><tr> 
           <td><a href="index.asp"><img name="header" src="media/images/header.gif" width="131" height="16" border="0" alt=""></a></td>
         </tr>
-        <tr> 
-          <td><a href="contact.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('button1','','media/images/button1_f2.gif',1)"><img name="button1" src="media/images/button1.gif" width="131" height="18" border="0" alt=""></a></td>
+        <tr>
+<td><a href="aboutUs.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('button3','','media/images/button3_f2.gif',1)"><img name="button3" src="media/images/button3.gif" width="131" height="18" border="0" alt=""></a></td>
+</tr>
+<tr>
+<td><a href="http://www.atlanta.net/atlantanet/acvb/corporate.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image106','','media/images/button_partners2.gif',1)"><img src="media/images/button_partners.gif" name="Image106" width="131" height="17" border="0"></a></td>
+</tr>
+<tr> 
+  <td><a href="contact.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('button1','','media/images/button1_f2.gif',1)"><img name="button1" src="media/images/button1.gif" width="131" height="18" border="0" alt=""></a></td>
         </tr>
         <tr> 
-          <td><a href="memberdirectory.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('button2','','media/images/button2_f2.gif',1)"><img name="button2" src="media/images/button2.gif" width="131" height="17" border="0" alt=""></a></td>
-        </tr>
-        <tr> 
-          <td><a href="aboutUs.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('button3','','media/images/button3_f2.gif',1)"><img name="button3" src="media/images/button3.gif" width="131" height="18" border="0" alt=""></a></td>
+          <td><a href="directions.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image109','','media/images/button_directions2.gif',1)"><img src="media/images/button_directions.gif" name="Image109" width="131" height="17" border="0"></a></td>
         </tr>
         <tr> 
           <td><a href="http://www.atlanta.net/acvb/contact_jobs.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image107','','media/images/button_employment2.gif',1)"><img src="media/images/button_employment.gif" name="Image107" width="131" height="17" border="0"></a></td>
         </tr>
         <tr> 
-          <td><a href="volunteers.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('button4','','media/images/button4_f2.gif',1)"><img name="button4" src="media/images/button4.gif" width="131" height="17" border="0" alt=""></a></td>
+          <td><a href="memberdirectory.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('button2','','media/images/button2_f2.gif',1)"><img name="button2" src="media/images/button2.gif" width="131" height="17" border="0" alt=""></a></td>
         </tr>
         <tr> 
           <td><a href="http://www.atlanta.net/fmo" target="_blank" onmouseover="MM_swapImage('button5','','media/images/button5_f2.gif',1)" onmouseout="MM_swapImgRestore()"><img name="button5" src="media/images/button5.gif" width="131" height="17" border="0" alt=""></a></td>
         </tr>
-        <tr> 
-          <td><a href="http://www.atlanta.net/atlantanet/acvb/corporate.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image106','','media/images/button_partners2.gif',1)"><img src="media/images/button_partners.gif" name="Image106" width="131" height="17" border="0"></a></td>
-        </tr>
 		<tr> 
-          <td><a href="directions.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image109','','media/images/button_directions2.gif',1)"><img src="media/images/button_directions.gif" name="Image109" width="131" height="17" border="0"></a></td>
+          <td><a href="videoimages.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('button6','','media/images/button6_f2.gif',1)"><img name="button6" src="media/images/button6.gif" width="131" height="16" border="0" alt=""></a></td>
         </tr>
         <tr> 
-          <td><a href="videoimages.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('button6','','media/images/button6_f2.gif',1)"><img name="button6" src="media/images/button6.gif" width="131" height="16" border="0" alt=""></a></td>
+          <td><a href="volunteers.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('button4','','media/images/button4_f2.gif',1)"><img name="button4" src="media/images/button4.gif" width="131" height="17" border="0" alt=""></a></td>
         </tr>
       </tbody></table>
 	<!-- Navigation -->	
@@ -190,12 +190,12 @@ function MM_preloadImages() { //v3.0
 		<table width="131" bgcolor="#F8E6E1" border="0" cellspacing="0" cellpadding="0">
 		  <tbody><tr>
 			<td width="5"><img src="../media/images/clear.gif" width="5" height="1" border="0"></td>
-			<td width="121" height="65" class="content"><a href="http://www.ci.atlanta.ga.us" target="_blank" class="link9ptDrkRed">› City
+			<td width="121" height="65" class="content"><a href="http://www.ci.atlanta.ga.us" target="_blank" class="link9ptDrkRed">&gt; City
 			    of Atlanta</a><br>
-			<a href="../visitors/calendarevents.asp" class="link9ptDrkRed">› Calendar of Events</a><br>
-			<a href="http://www.atlanta.net/visitors/brochureGuides.asp" class="link9ptDrkRed">› Free Brochure/Guides</a><br>
-			<a href="contact.asp" class="link9ptDrkRed">› Contact Us</a><br>
-                    <a href="../visitors/specials.asp" class="link9ptDrkRed">› 
+			<a href="../visitors/calendarevents.asp" class="link9ptDrkRed">&gt; Calendar of Events</a><br>
+			<a href="http://www.atlanta.net/visitors/brochureGuides.asp" class="link9ptDrkRed">&gt; Free Brochure/Guides</a><br>
+			<a href="contact.asp" class="link9ptDrkRed">&gt; Contact Us</a><br>
+                    <a href="../visitors/specials.asp" class="link9ptDrkRed">&gt; 
                 eNewsletter</a><br></td>
 			<td width="5"><img src="../media/images/clear.gif" width="5" height="1" border="0"></td>
 		  </tr>
@@ -434,7 +434,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
 	  <tr>
 		<td width="131" bgcolor="#FFFFFF"><img src="../media/images/clear.gif" width="1" height="1" border="0"></td>
 	  </tr>
-	  
+    
 	</tbody></table>
 	<!-- InstanceBeginEditable name="sponsors" -->
 	<table width="131" bgcolor="#F2D291" border="0" cellspacing="0" cellpadding="0">
@@ -475,7 +475,7 @@ if (browName=='Netscape'){
 if (browName=='Microsoft Internet Explorer')
      { document.write('<ifr'+'ame src="http://www.acvb.com/banman/banman.asp?ZoneID=317&Task=Get&X=' + browDateTime + '" width=110 height=109 Marginwidth=0 Marginheight=0 Hspace=0 Vspace=0 Frameborder=0 Scrolling=No></ifr'+'ame>'); }
 // --> 
-</script><iframe src="http://www.acvb.com/banman/banman.asp?ZoneID=317&amp;Task=Get&amp;Browser=NETSCAPE6&amp;X=1582137370702" width="110" height="109" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="No"></iframe> <noscript>
+</script><iframe src="http://www.acvb.com/banman/banman.asp?ZoneID=317&amp;Task=Get&amp;Browser=NETSCAPE6&amp;X=1582137372827" width="110" height="109" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="No"></iframe> <noscript>
                   <a href="http://www.acvb.com/banman/banman.asp?ZoneID=317&Task=Click&Mode=HTML&PageID=34637" target="_new"> 
                   <img src="http://www.acvb.com/banman/banman.asp?ZoneID=317&Task=Get&Mode=HTML&PageID=34637" width="110" height="109" border="0"></a> 
                   </noscript> 
@@ -487,31 +487,7 @@ if (browName=='Microsoft Internet Explorer')
               </tr>
               <tr> 
                 <td width="120" align="center">
-                  <!-- Begin Ban Man Pro Banner Code -  Zone: Summer Coupons - See&Do -->
-                  <script language="JAVASCRIPT">
-<!--
-var browName = navigator.appName;
-var browDateTime = (new Date()).getTime();
-var browVersion = parseInt(navigator.appVersion);
-var ua=navigator.userAgent.toLowerCase();
-var adcode='';
-if (browName=='Netscape'){
-     if (browVersion>=5) 
-          { document.write('<ifr'+'ame src="http://www.acvb.com/banman/banman.asp?ZoneID=239&Task=Get&Browser=NETSCAPE6&X=' + browDateTime + '" width=117 height=100 Marginwidth=0 Marginheight=0 Hspace=0 Vspace=0 Frameborder=0 Scrolling=No></ifr'+'ame>'); }
-     else if ((browVersion>=4)&&(ua.indexOf("mac")==-1))
-          { document.write('<S'+'CRIPT src="http://www.acvb.com/banman/banman.asp?ZoneID=239&Task=Get&Browser=NETSCAPE4">');
-          document.write('</'+'scr'+'ipt>');
-          document.write(adcode); }
-     else if (browVersion>=3) 
-          { document.write('<A HREF="http://www.acvb.com/banman/banman.asp?ZoneID=239&Task=Click&Mode=HTML&PageID=1518&RandomNumber=' + browDateTime + '" target="_new"><IMG SRC="http://www.acvb.com/banman/banman.asp?ZoneID=239&Task=Get&Mode=HTML&PageID=1518&RandomNumber=' + browDateTime + '" width="117" height="100" border="0"></A>'); } }
-if (browName=='Microsoft Internet Explorer')
-     { document.write('<ifr'+'ame src="http://www.acvb.com/banman/banman.asp?ZoneID=239&Task=Get&X=' + browDateTime + '" width=117 height=100 Marginwidth=0 Marginheight=0 Hspace=0 Vspace=0 Frameborder=0 Scrolling=No></ifr'+'ame>'); }
-// --> 
-</script><iframe src="http://www.acvb.com/banman/banman.asp?ZoneID=239&amp;Task=Get&amp;Browser=NETSCAPE6&amp;X=1582137370707" width="117" height="100" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="No"></iframe> <noscript>
-                  <a href="http://www.acvb.com/banman/banman.asp?ZoneID=239&Task=Click&Mode=HTML&PageID=1518" target="_new"> 
-                  <img src="http://www.acvb.com/banman/banman.asp?ZoneID=239&Task=Get&Mode=HTML&PageID=1518" width="117" height="100" border="0"></a> 
-                  </noscript> 
-                  <!-- End Ban Man Pro Banner Code -  Zone: Summer Coupons - See&Do -->
+                  
                 </td>
               </tr>
               <tr> 
@@ -558,8 +534,10 @@ if (browName=='Microsoft Internet Explorer')
   <tbody><tr>
     <td width="20" background="../media/images/graphicFooter.gif"><a href="../visitors/registration/login.asp"><img src="../media/images/buttonMyAtl.gif" width="20" height="24" border="0"></a></td>
 	<td width="378" background="../media/images/graphicFooter.gif" class="content9ptDrkGrey"><a href="../visitors/registration/login.asp" class="linkFooter">My Atlanta Login</a>  |  <a href="privacy.asp" class="linkFooter">Privacy Policy</a>  |  <a href="contact.asp" class="linkFooter">Contact Us</a></td>
-	<td width="377" background="../media/images/graphicFooter.gif" class="content9ptDrkGrey"><div align="right">Atlanta.net
-    - All Rights Reserved.© Copyright 2003&nbsp;&nbsp;</div></td>
+	<td width="377" background="../media/images/graphicFooter.gif" class="content9ptDrkGrey">
+<div align="right">Atlanta.net
+    - All Rights Reserved.© Copyright 2004&nbsp;&nbsp;</div>
+</td>
   </tr>
 </tbody></table>
 <!-- Copyright -->
