--- a/d/di/dis/discoverykids.com.html
+++ b/d/di/dis/discoverykids.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the discoverykids.com privacy policy that was archived on 2004-06-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040604021727id_/http%3A//kids.discovery.com/utilities/about/privacypolicy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the discoverykids.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207223616id_/http%3A//kids.discovery.com/utilities/about/privacypolicy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 
@@ -35,43 +35,42 @@ postionList = "compscreen,admedia,promotile";
 <!-- header -->
 <!-- link [ tracking ] -->
 <script type="text/javascript" language="JavaScript" src="/common/js/linktracker.js"></script>
-
 <!-- msn [ tophat : detect ] -->
 <script type="text/javascript" language="JavaScript" src="/common/js/msn,tophat,pre.js"></script>
+
+<!-- Unicast duration tracking -->
+<script language="JavaScript1.2" defer="true" src="http://cache.unicast.com/tracker/scripts/unicast.js"></script>
+
 <!-- end header -->
 
 <!-- tophat -->
-<!-- top hat [ height = (110+50+79) > 239px ] -->
+<div class="hide"><!-- ad [ compscreen ] --><script type="text/javascript" language="JavaScript">OAS_RICH("compscreen");</script><!-- end ad --></div>
+
+<!-- top hat [ height = (110+76+53) > 239px ] -->
 <div style="width: 770px; height: 110px; background-color: rgb(132,8,132);">
 	<div style="z-index: 1;"><img src="/common/sgallery/kid/tophat810/adsback.gif" width="770" height="110" border="0" alt="background" usemap="#adbg"></div>
-	<div style="z-index: 2; margin-top: -110px;"><script type="text/javascript" language="JavaScript" src="/common/js/backto.js"></script></div>
+	<div style="z-index: 2; margin-top: -110px;"><script type="text/javascript" language="JavaScript" src="/common/javascript/backTo.js"></script></div>
 	<div style="margin-left: 25px;"><img src="/common/sgallery/kid/advertisement.gif" width="15" height="60" border="0" alt="ad"></div>
-	<map name="adbg">
+	<map id="adbg" name="adbg">
 		<area shape="rect" coords="528,20,646,80" onclick="trackLink('kid,tophat/adbg/schedule','kids.discovery.com');" href="/schedule/schedule.jsp?channel=KID&amp;date=today" alt="tv schedule" target="_top">
 		<area shape="rect" coords="666,26,722,76" onclick="trackLink('kid,tophat/adbg/shopping','kids.discovery.com');" href="http://shopping.discovery.com/stores/servlet/Jumpzone?di=40588001&amp;ci=10&amp;ti=1000000" alt="store" target="_top">
 	</map>
 </div>
-<div style="width: 770px; height: 50px; valign: bottom; background-color: rgb(132,8,132);">
-	<div><a onclick="trackLink('kid,tophat/networklogo','kids.discovery.com');" href="http://kids.discovery.com" target="_top"><img src="/common/sgallery/kid/tophat810/logo.gif" width="165" height="50" border="0" alt="logo"></a><img src="/common/sgallery/kid/tophat810/navbar.gif" width="605" height="25" border="0" alt="nav bar" usemap="#tophatnav"></div>
-	<map name="tophatnav">
-		<area shape="rect" coords="8,2,125,22" onclick="trackLink('kid,tophat/navbar/link,dsc','kids.discovery.com');" href="http://dsc.discovery.com" alt="Discovery Channel" target="_top">
-		<area shape="rect" coords="134,2,167,22" onclick="trackLink('kid,tophat/navbar/link,tlc','kids.discovery.com');" href="http://tlc.discovery.com" alt="The Learning Channel (TLC)" target="_top">
-		<area shape="rect" coords="177,2,268,22" onclick="trackLink('kid,tophat/navbar/link,apl','kids.discovery.com');" href="http://animal.discovery.com" alt="Animal Planet" target="_top">
-		<area shape="rect" coords="279,2,375,22" onclick="trackLink('kid,tophat/navbar/link,trv','kids.discovery.com');" href="http://travel.discovery.com" alt="Travel Channel" target="_top">
-		<area shape="rect" coords="382,2,492,22" onclick="trackLink('kid,tophat/navbar/link,dhc','kids.discovery.com');" href="http://health.discovery.com" alt="Discovery Health Channel" target="_top">
-		<area shape="rect" coords="498,2,600,22" onclick="trackLink('kid,tophat/navbar/link,shop','kids.discovery.com');" href="http://shopping.discovery.com" alt="Discovery Store" target="_top">
-	</map>
+<div style="width: 770px; height: 76px; background-color: rgb(132,8,132);">
+<table cellpadding="0" cellspacing="0" border="0"><tbody><tr>
+	<td width="165" height="76" align="left" valign="middle"><a onclick="trackLink('kid,tophat/networklogo','kids.discovery.com');" href="http://kids.discovery.com" target="_top"><img src="/common/sgallery/kid/tophat810/logo.gif" width="165" height="76" border="0" alt="logo"></a></td>
+	<td width="488" align="center" valign="middle"><a onclick="trackLink('kid,tophat/ecommbanner','kids.discovery.com');" href="http://kids.discovery.com/utilities/shopping/shopping.html?content=tophat" target="_top"><img src="/ads/ecomm/tophat/holiday04banner.gif" width="390" height="60" border="0" alt="discovery store"></a></td>
+	<td width="117" align="left" valign="middle"><img src="/common/sgallery/kid/tophat810/nav.gif" width="117" height="76" border="0" alt="nav bar" usemap="#tophatnav"><map id="tophatnav" name="tophatnav"><area shape="rect" coords="14,7,102,15" onclick="trackLink('kid,tophat/navbar/link,dsc','kids.discovery.com');" href="http://dsc.discovery.com" alt="Discovery Channel" target="_top"><area shape="rect" coords="14,21,102,29" onclick="trackLink('kid,tophat/navbar/link,tlc','kids.discovery.com');" href="http://tlc.discovery.com" alt="The Learning Channel (TLC)" target="_top"><area shape="rect" coords="14,34,102,41" onclick="trackLink('kid,tophat/navbar/link,apl','kids.discovery.com');" href="http://animal.discovery.com" alt="Animal Planet" target="_top"><area shape="rect" coords="14,47,102,54" onclick="trackLink('kid,tophat/navbar/link,trv','kids.discovery.com');" href="http://travel.discovery.com" alt="Travel Channel" target="_top"><area shape="rect" coords="14,60,102,67" onclick="trackLink('kid,tophat/navbar/link,dhc','kids.discovery.com');" href="http://health.discovery.com" alt="Discovery Health Channel" target="_top"></map></td>
+</tr></tbody></table>
 </div>
-<div style="height: 79px;">
-	<img src="/common/sgallery/kid/tophat810/banner.gif" width="527" height="67" border="0" alt=".com address"><br>
+<div style="height: 53px;">
+	<img src="/common/sgallery/kid/tophat810/banner.gif" width="527" height="41" border="0" alt=".com address"><br>
 	<img src="/common/sgallery/kid/tophat810/bottom.gif" width="527" height="12" border="0" alt="bottom"><br>
 </div>
-<div style="height: 79px; margin-top: -79px; margin-left: 527;">
-	<div style="width: 243px; height: 43px; background-color: rgb(132,8,132);">
-		<div><img src="/common/sgallery/kid/tophat810/searchtop.gif" width="243" height="43" border="0" alt="search top" usemap="#searchtop"></div>
-		<map name="searchtop">
-			<area shape="rect" coords="42,30,120,41" onclick="trackLink('kid,tophat/privacy_button','kids.discovery.com');" href="/utilities/about/privacypolicy.html" alt="privacy policy" target="_top">
-		</map>
+<div style="height: 53px; margin-top: -53px; margin-left: 527px;">
+	<div style="width: 243px; height: 17px; background-color: rgb(132,8,132);">
+		<div><img src="/common/sgallery/kid/tophat810/searchtop.gif" width="243" height="17" border="0" alt="search top" usemap="#searchtop"></div>
+		<map id="searchtop" name="searchtop"><area shape="rect" coords="130,1,189,16" onclick="trackLink('kid,tophat/privacy_button','kids.discovery.com');" href="/utilities/about/privacypolicy.html" alt="site index" target="_top"></map>
 	</div>
 	<div>
 		<form name="search" action="http://search.discovery.com/search" class="zeroOut">
@@ -84,7 +83,7 @@ postionList = "compscreen,admedia,promotile";
 		<input type="hidden" name="getfields" value="*">
 		<div style="margin-top: 2px;"><a onclick="trackLink('kid,tophat/adv_search_button','kids.discovery.com');" href="/search/search.html"><img src="/common/sgallery/search_main.gif" width="49" height="23" border="0" alt="search"></a></div>
 		<div style="margin-top: -18px; margin-left: 52px;"><input type="text" name="q" size="18" maxlength="30" class="inField" style="width: 150px;"></div>
-		<div style="margin-top: -23px; margin-left: 204px;"><input type="image" name="go" src="/common/sgallery/go_main.gif" width="39" height="23" border="0" alt="go!"></div>
+		<div style="margin-top: -23px; margin-left: 204px;"><input type="image" name="go" src="/common/sgallery/go_main.gif" alt="go!"></div>
 		</form>
 	</div>
 </div>
@@ -92,7 +91,7 @@ postionList = "compscreen,admedia,promotile";
 <!-- end tophat -->
 
 <!-- date [ height = 23px ] -->
-<div class="date">June 03, 2004 EDT</div>
+<div class="date">December 07, 2004 EST</div>
 <!-- date -->
 
 <!-- master table -->
@@ -165,7 +164,9 @@ Discovery encourages you to get permission from your parents before sending any 
 
 <p>To help make our sites more responsive to the needs of our visitors, we invoke a standard feature found in browser software, called a "cookie", to assign each visitor a unique, random number, a sort of anonymous user ID that resides on your computer. The cookie doesn't actually identify the visitor, just the computer that a visitor uses to access our site. A cookie can't read data off your hard drive. We do not link cookie data with personally identifiable information, nor do we store kid's personal information in our cookies.  You can disable cookies at any time by changing the preferences in your browser.</p>
 
-<p>Also, please note that our advertisers or third-party ad servers may assign their own cookies to your browser, a process that we don't control. For more about third-party ad servers, click here. </p>
+<p>
+Also, please note that our advertisers or third-party ad servers may assign their own cookies to your browser, a process that we don't control. For more about third-party ad servers, <a href=" http://www.networkadvertising.org/optout_nonppii.asp">click here.</a>  
+</p>
 
 <p>Finally, Discovery keeps records of certain non-personally identifiable information such as the number of hits a Web page receives, IP address, and other aggregate data.  We do not link this aggregate data with any personal information.  Third parties that help us administer our Web sites may have access to this non-personally identifiable, aggregate data, as may our third-party ad servers.  However, these third parties are bound to keep this information confidential. </p>
 
@@ -281,6 +282,23 @@ All information gathered on any Discovery.com Web site is encrypted or protected
 	Pictures: DCI | <br>
 </p>
 <!-- legal -->
+<!-- banner [ ecomm ] -->
+<script type="text/javascript" language="JavaScript">
+<!--
+var alertFlag = false;
+var ecommItems = new Array(["http://www.discovery.com/common/sgallery/ecomm/btmbanner_gift.gif","http://shopping.discovery.com/stores/servlet/Jumpzone?di=40588001&ci=13&ti=9027482"],["http://www.discovery.com/common/sgallery/ecomm/btmbanner_hovercraft.gif","http://shopping.discovery.com/stores/servlet/Jumpzone?di=40588001&ci=13&ti=9011540"]);
+var dirStr = window.location.pathname; var dirStrChopped = dirStr.split("/"); if (dirStrChopped[1] == "sweepstakes") { alertFlag = true; }
+var aRandomNumber = Math.round(Math.random()*1);
+if (!alertFlag) { document.write("<a href=\"" + ecommItems[aRandomNumber][1] + "\" onclick=\"trackLink('footer/ecommbanner','" + window.location.hostname + "')\;\"><img src=\"" + ecommItems[aRandomNumber][0] + "\" width=\"390\" height=\"60\" border=\"0\" alt=\"shopping banner\" /></a>"); }
+//-->
+</script><a href="http://shopping.discovery.com/stores/servlet/Jumpzone?di=40588001&amp;ci=13&amp;ti=9011540" onclick="trackLink('footer/ecommbanner','web.archive.org');"><img src="http://www.discovery.com/common/sgallery/ecomm/btmbanner_hovercraft.gif" width="390" height="60" border="0" alt="shopping banner"></a>
+
+
+<!-- link [ ecomm ] [ rem :: 01.01.05 -->
+<noscript><a href="http://www.discoverholidaygifts.com"><strong>Holiday Gifts and Christmas Gifts</strong></a></noscript>
+
+
+<!-- legal -->
 <p>
 	By visiting this site, you agree to the terms and conditions<br>
 	of our <a href="/utilities/about/visitoragreement.html">Visitor Agreement</a>. Please read. <a href="/utilities/about/privacypolicy.html">Privacy Policy</a>.<br>
@@ -324,100 +342,18 @@ OAS_RICH("compscreen");
 <!-- footer -->
 <!-- msn [ tophat : execute ] -->
 <script type="text/javascript" language="JavaScript" src="/common/js/msn,tophat,post.js"></script>
-
 <!-- click through(s) << 3rd parties -->
 <script type="text/javascript" language="JavaScript" src="/common/js/getparam.js"></script>
 <script type="text/javascript" language="JavaScript" src="/common/js/through.js"></script>
+
+<!-- for testing new oas tags (will only activate if 'oastags' cookie is set) 
+<div class="padding25 creditsText" id="debugDIV"></div>
+
+<script language="JavaScript" type="text/javascript">deBug();</script> 
+-->
+
 <!-- end footer -->
 
-
-<!-- include [ browsertag ] -->
-<!-- OAS Frequency Cap -->
-<script type="text/javascript" language="JavaScript" src="/common/js/oasAdCap.js"></script>
-<!-- SageMetrics Browser Tag -->
-<script type="text/javascript" language="JavaScript">
-<!--
-/***
-type:    jsp, html, xsl, swf
-ad:         none, oas
-media:      none, video, audio, ria
-content: standard, 3rdparty, tvlistings, interactive, search, ...
-***/
-var st_type = "type:html"; var st_oas = "ad:none"; var st_media = "media:none"; var st_content = "content:standard";
-var oasCall = "http://ads.discovery.com/RealMedia/ads/adstream_mjx.cgi/";
-var adSRC  = oasCall + window.location.hostname.toLowerCase() + window.location.pathname + "1" + Math.random() + "@browsertag";
-document.write('<script type="text/javascript" language="JavaScript" src="' + adSRC + '"></script>');
-//-->
-</script><script type="text/javascript" language="JavaScript" src="http://ads.discovery.com/RealMedia/ads/adstream_mjx.cgi/web.archive.org/web/20040604021727id_/http%3A//kids.discovery.com/utilities/about/privacypolicy.html10.2841320616331502@browsertag"></script>
-<!-- needs to be separate tag in order to properly initialize -->
-<script language="Javascript" type="text/javascript">
-<!--
-OAS_RICH("browsertag");
-//-->
-</script>
-<script language="Javascript" type="text/javascript">
-<!--
-var st_extra = st_type + "," + st_oas + "," + st_media + "," + st_content;
-var st_pg=""; 
-var st_ai = st_extra;
-var st_v=1.0; 
-var st_ci="12"; 
-var st_di="d001"; 
-var st_dd="st.sageanalyst.net"; 
-var st_tai="v:1.2.3";
-
-function sageTrak(ainfo,advcall) {
-//12
-
-	var st_iu=st_rs=st_cd=st_rf=st_us=st_hn=st_qs=st_ce="";
-	var d=document; 
-	var l=location;
-	var n=navigator; 
-	st_ce=n.cookieEnabled;
-
-	st_qs=escape(l.search.substring(1)); 
-	st_us=escape(l.pathname);
-	st_hn=l.host;
-	st_rf=escape(d.referrer);
-
-	if(st_v==1.2) { 
-		var s=screen;
-		st_rs=escape(s.width+"x"+s.height);
-		st_cd=s.colorDepth;
-	}
-
-	proto = "http:";
-	if (location.protocol == "https:") { 
-		proto = "https:"; 
-		st_dd = "st.sageanalyst.net";
-	}
-
-		st_iu=proto+"//"+st_dd+"/" + (new Date()).getTime() + "/JS?ci="+st_ci+"&di="+st_di+"&pg="+st_pg+"&us="+st_us+"&qs="
-		+st_qs+"&rf="+st_rf+"&rs="+st_rs+"&cd="+st_cd+"&hn="+st_hn+"&ce="+st_ce+"&jv="+st_v+"&tai="+st_tai+"&ai="+ainfo;
-
-	var SM = new Image(); SM.src = st_iu;
-	var MM = new Image(); MM.src = advcall;
-}
-
-//-->
-</script>
-<script type="text/javascript" language="JavaScript1.1">st_v=1.1;</script>
-<script type="text/javascript" language="JavaScript1.2">st_v=1.2;</script>
-<script type="text/javascript" language="JavaScript1.1" src="//st.sageanalyst.net/tag-12.js"></script>
-<script type="text/javascript" language="JavaScript">
-if (st_v==1.0) {
-	var st_uj;
-	var st_dn = (new Date()).getTime();
-	var st_rf = escape(document.referrer);
-	st_uj = "//"+st_dd+"/"+st_dn+"/JS?ci="+st_ci+"&di="+st_di+"&pg="+st_pg+"&rf="+st_rf+"&jv="+st_v+"&tai="+st_tai+"&ai="+st_ai;
-	var iXz = new Image();
-	iXz.src = st_uj;
-}
-</script>
-<noscript><img src="//st.sageanalyst.net/NS?ci=12&di=d001&pg=&ai="></noscript>
-
-
-<!-- end include -->
 
 
 
