--- a/m/ma/mar/marshall.edu.html
+++ b/m/ma/mar/marshall.edu.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the marshall.edu privacy policy that was archived on 2004-06-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040603112206id_/http%3A//www.marshall.edu/www/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the marshall.edu privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207223904id_/http%3A//www.marshall.edu/www/privacy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <meta http-equiv="Content-Language" content="en-us">
@@ -133,10 +133,10 @@ function MM_swapImage() { //v3.0
 &nbsp;&nbsp;<a class="primary" href="/milo/">MILO</a>/<a class="primary" href="/milo/milocou.asp">Course 
 Schedule</a><br>
 &nbsp;&nbsp;<a class="primary" href="http://www.marshall.bkstr.com/">MU Bookstore</a><br>
-&nbsp;&nbsp;<a class="primary" href="/www/ugadmiss/">Online Application</a><br>
+&nbsp;&nbsp;<a class="primary" href="/admissions/form/">Online Application</a><br>
 &nbsp;&nbsp;<a class="primary" href="http://webpages.marshall.edu/">Personal Webpages</a><br>
 &nbsp;&nbsp;<a class="primary" href="/president/">President's Welcome</a><br>
-&nbsp;&nbsp;<a class="primary" href="/muonline/">Virtual Campus</a>/<a class="primary" href="/it/cit/webct/webctredirect.asp">WebCT</a><a name="skip_popular">
+&nbsp;&nbsp;<a class="primary" href="/muonline/">Virtual Campus</a>/<a class="primary" href="http://vista.marshall.edu/">WebCT</a><a name="skip_popular">
     <img src="/www/images/spacer.gif" alt="End of MU Popular Site Links" border="0" width="1" height="1"></a>
     </td>
     <td bgcolor="#999999" align="left" valign="top" width="1" background="images/greydots.gif"> 
