farmindustrynews.com (archived on 2004-12-07)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": false,
  "categories": "business;education",
  "char_count": 5086,
  "classifier_probability": 0.95,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.79,
  "homepage_snapshot_redirected_domain": "farmindustrynews.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20040926075709id_/http://www.farmindustrynews.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20040926075709id_/http%3A//farmindustrynews.com",
  "interval": "2004_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "primediabusiness.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041207224608id_/http%3A//www.primediabusiness.com/company/privacy.asp%3Fpage%3DPrivacy",
  "policy_title": "Privacy Policy",
  "policy_url": "primediabusiness.com/company/privacy.asp?page=Privacy",
  "sha1": "8d043c6ec02ab1ccfeb08e4fa3d6ea9f2520099e",
  "simhash": 17124874015478404580,
  "simhash_updated": true,
  "site_hostname": "farmindustrynews.com",
  "site_url": "http://farmindustrynews.com",
  "smog": 14.93,
  "strict_updated": true,
  "timestamp": "20041207224608",
  "word_count": 807,
  "year": 2004
}

--- a/f/fa/far/farmindustrynews.com.html
+++ b/f/fa/far/farmindustrynews.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the farmindustrynews.com privacy policy that was archived on 2004-06-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040603123137id_/http%3A//www.primediabusiness.com/company/privacy.asp%3Fpage%3DPrivacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the farmindustrynews.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207224608id_/http%3A//www.primediabusiness.com/company/privacy.asp%3Fpage%3DPrivacy) for the most accurate reproduction.-->
 
 <html><head>
 <link rel="stylesheet" href="/includes/pb.css" type="text/css">
@@ -183,6 +183,13 @@ return false;
 <div class="nav" align="right">
 
 	
+		<a href="/magazines/industries.asp?industry_id=17&amp;page=Apparel">Apparel                     </a>
+
+			
+
+<div class="nav" align="right">
+
+	
 		<a href="/magazines/industries.asp?industry_id=2&amp;page=Construction">Construction                                      </a>
 
 			
@@ -195,6 +202,13 @@ return false;
 
 	
 		<a href="/magazines/industries.asp?industry_id=3&amp;page=Electrical">Electrical                                        </a>
+
+			
+
+<div class="nav" align="right">
+
+	
+		<a href="/magazines/industries.asp?industry_id=20&amp;page=Electronics">Electronics</a>
 
 			
 
@@ -278,13 +292,6 @@ return false;
 <div class="nav" align="right">
 
 	
-		<a href="/magazines/industries.asp?industry_id=20&amp;page=RF">RF</a>
-
-			
-
-<div class="nav" align="right">
-
-	
 		<a href="/magazines/industries.asp?industry_id=15&amp;page=Security">Security                                          </a>
 
 			
@@ -293,13 +300,6 @@ return false;
 
 	
 		<a href="/magazines/industries.asp?industry_id=16&amp;page=Telecommunications">Telecommunications                                </a>
-
-			
-
-<div class="nav" align="right">
-
-	
-		<a href="/magazines/industries.asp?industry_id=17&amp;page=Textiles">Textiles                          </a>
 
 			
 
@@ -355,6 +355,10 @@ return false;
 	
 		<tbody><tr class="pb">
 			 <td valign="top" rowspan="2" align="left"> 
+
+				 <p class="pbbold">
+				 <b>Policy Updated: Effective July 16, 2004</b>
+				 </p>
 				          
 				      <p>
 				      Since your privacy is a priority to us, we have provided this detailed policy statement 
@@ -429,12 +433,13 @@ return false;
 				changes on this page so that you are always aware
 				of the information we collect, how we use it, and under what circumstances we
 				disclose it. As with all areas of our sites, Primedia Business Magazines &amp;
-				Media welcomes your questions and comments. If you have any questions or
-				concerns about our stated privacy policies, please contact us at <a href="mailto:privacypolicy@primediabusiness.com">privacypolicy@primediabusiness.com</a>.
+				Media welcomes your questions and comments. If you have any questions or concerns
+				about our stated privacy policies, or if&nbsp;you wish to review or request changes
+				to your information, please contact us at <a href="mailto:privacypolicy@primediabusiness.com">privacypolicy@primediabusiness.com</a>.
 				</p>
 
 				<p class="pb">Copyright
-				2003 Primedia Business Magazines &amp; Media. All rights reserved.</p>
+				2004 Primedia Business Magazines &amp; Media. All rights reserved.</p>
 
 				      
 					<p class="story-title"><u>Privacy Policy for subscribers of print 
