monstermemberarea.com (archived on 2004-12-07)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "parked",
  "char_count": 1788,
  "classifier_probability": 0.93,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "very_confusing",
  "flesch_kincaid": 14.87,
  "homepage_snapshot_redirected_domain": "monstermemberarea.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20040925163224id_/http://monstermemberarea.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20040925163224id_/http%3A//monstermemberarea.com",
  "interval": "2004_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "monstermemberarea.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041207230451id_/http%3A//www.monstermemberarea.com/privacy/privacy.html",
  "policy_title": "Privacy Policy Statement",
  "policy_url": "monstermemberarea.com/privacy/privacy.html",
  "sha1": "4a73c1b46f1fbb8bac885aa9532ccc9b426f357e",
  "simhash": 5765610565101465077,
  "simhash_updated": false,
  "site_hostname": "monstermemberarea.com",
  "site_url": "http://monstermemberarea.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20041207230451",
  "word_count": 273,
  "year": 2004
}

--- a/m/mo/mon/monstermemberarea.com.html
+++ b/m/mo/mon/monstermemberarea.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the monstermemberarea.com privacy policy that was archived on 2004-06-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040603161602id_/http%3A//www.monstermemberarea.com/privacy/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the monstermemberarea.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207230451id_/http%3A//www.monstermemberarea.com/privacy/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>Privacy Policy Statement</title>
@@ -16,10 +16,9 @@
       <p><font face="Arial, Helvetica, sans-serif" size="2">Our postal address 
         is:<br>
         WebConexus Intermedia Limited<br>
-        C.P. Box 32148 St. Andre<br>
-        Montreal,Québec<br>
-        H2L4Y5<br>
-        Canada<br>
+        2019 Edgely Road<br>
+        Levittown, PA 19057<br>
+        USA<b></b><br>
         e-mail: support@monstermemberarea.com</font></p>
       <p><font face="Arial, Helvetica, sans-serif" size="2">In General, WebConexus Intermedia Limited does not collect, store, use or disclose personally identifying 
         information. For each visitor to our Web page, our Web server automatically 
@@ -39,10 +38,10 @@
         operated by third parties, and is not responsible for the information 
         collection or privacy practices or the content of those third party Web 
         sites or applications.</font></p>
-      <p><font face="Arial, Helvetica, sans-serif" size="2"> iBill and Paycom 
+      <p><font face="Arial, Helvetica, sans-serif" size="2"> CCBill and Paycom 
         are our credit card processors. WebConexus Intermedia Limited, does not store 
         or maintain any credit or personal information. All information is stored 
-        at iBill's or Paycom's highly secure sites. iBill's Privacy Policy can 
+        at CCBill or Paycom's highly secure sites. CCBill Privacy Policy can 
         be viewed by <a href="http://www.ibill.com/About/Legal.cfm#Privacy">clicking 
         here</a>, and Paycom's can be viewed by <a href="http://www.paycom.net/">clicking 
         here</a>.</font></p>
