--- a/b/bo/boo/boortz.com.html
+++ b/b/bo/boo/boortz.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the boortz.com privacy policy that was archived on 2004-06-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040602212758id_/http%3A//boortz.com/inside/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the boortz.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207233123id_/http%3A//boortz.com/inside/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 
@@ -115,7 +115,7 @@ var months=new Array("Jan","Feb","Mar","Apr.","May","Jun","Jul","Aug","Sep","Oct
 <table width="100%" cellspacing="0" cellpadding="0" border="0">
 <tbody><tr><td align="left" valign="middle" width="245"><a href="/index.html"><img src="/templates/images/logo.gif" width="245" height="99" alt="" border="0"></a></td>
 <td align="center" valign="middle" width="100%"><span class="adhed">ADVERTISEMENT</span><br>
-                        <nolayer><iframe src="http://ad.doubleclick.net/adi/cxri.boortz/inside;pg=/inside/privacy.html;mkt=atl;sz=468x60;tile=7;ord=QL5GXQoAAHQAAAQDUPM?" width="468" height="60" frameborder="0" border="0" marginheight="0" marginwidth="0" scrolling="no"><a href="http://ad.doubleclick.net/jump/cxri.boortz/inside;pg=/inside/privacy.html;mkt=atl;sz=468x60;tile=7;ord=QL5GXQoAAHQAAAQDUPM?"><img src="http://ad.doubleclick.net/ad/cxri.boortz/inside;pg=/inside/privacy.html;mkt=atl; sz=468x60;tile=7;ord=QL5GXQoAAHQAAAQDUPM?" height=60 width=468 border="0"></A></iframe></nolayer><ilayer id="ph468601" visibility="hidden" width="468" height="60"></ilayer>
+                        <a href="/nuze/"><img src="/includes/ads/inhouse/nealz_nuze468.gif" width="468" height="60" alt="Nealz Nuze" border="0"></a>
 
 
 
@@ -384,58 +384,7 @@ A final note:  The Web is an evolving medium.  If we need to change our privacy 
 </tbody></table>
 <!--htdig_noindex-->
 <!-- begin footer -->
-                                         <table width="100%" cellspacing="0" cellpadding="10" border="0"><tbody><tr><td>
-
-        <div align="right" class="note">SPONSORED LINKS</div>
-<table cellspacing="1" cellpadding="0" border="0" width="100%" bgcolor="#CCCCCC">
-<tbody><tr><td align="center" valign="top" bgcolor="#CCCCCC">
-        <table cellspacing="1" cellpadding="5" border="0" width="100%" bgcolor="white">
-        <tbody><tr><td align="left" valign="top">
-     <a href="http://us01.xmlsearch.findwhat.com/bin/findwhat.dll?clickthrough&amp;y=48504&amp;x=ygGLSn:y9l9kz8VYNaX1O2XdcySvrgdeb2:byPl;BVSaXP9Xb2:N3Kde468lsSBAcmtl;ASkRSGJ32gf4TLUra;UOTLKN103dEU4jnGvX18kd2Qe9E0UjV0IgmznhCW4sa;0zTGpOW8WFSp5yX8MNKUD9SjwIEgKSfq5z" onmouseover="window.status='portal.hungryminds.com';return true" onmouseout="window.status='';return true" target="_new">Free Help From Dummies.com</a>  <img src="http://us01.xmlsearch.findwhat.com/bin/findwhat.dll?SendImpression&amp;d=kbxw;hhF5IsWcMVg9OXr6Hgmub;c:b5MBTtQkT5sUbsCeDxELD6m0H0C5KMkAg;5D4dWaOdjmMfNKim;fY2HxbfV8Ttq5IMhmIlrzqhmDIgBlFMoanCga4OA47tb;LuTU75IC7BFdOsK9SCWlgVFRxk43TS$U" width="0" height="0" border="0"><br>
-Free newsletters on everything. From computing to investing to recipes, find the information you need on Dummies.com!<p>
-     <a href="http://us01.xmlsearch.findwhat.com/bin/findwhat.dll?clickthrough&amp;y=48504&amp;x=jsaxFUe9MW;N;hfjBoXeHd4YZIDUUziGtSf8wer3VW;cE:UR8XchFWwT4xKZWo;T48:qF:Xq9zUqcv;84Vb0yA1NqzK6AlZPh7pTud:xr03ShLqSi34LmdwXd:ajMz30mWd78AfBFAQXtol49:eqDtePtM;c12eUU6$$J" onmouseover="window.status='http://us01.xmlsearch.findwhat.com/bin/findwhat.dll?clickthrough&amp;y=48504&amp;x=jsaxFUe9MW;N;hfjBoXeHd4YZIDUUziGtSf8wer3VW;cE:UR8XchFWwT4xKZWo;T48:qF:Xq9zUqcv;84Vb0yA1NqzK6AlZPh7pTud:xr03ShLqSi34LmdwXd:ajMz30mWd78AfBFAQXtol49:eqDtePtM;c12eUU6$$J';return true" onmouseout="window.status='';return true" target="_new">Sell Your Home Fast. Find and Compare REALTORS®.</a>  <img src="http://us01.xmlsearch.findwhat.com/bin/findwhat.dll?SendImpression&amp;d=uAhuJ0ZG7elqF;atAGwG05QKHDd005ajSgVooZqfJ6VueAuYeS6L7ZSjDnL9LesvFMqPEXwKeFqU8J2Rokq7WZ4d2Xhc6kaWKHkfET:pWeSE0hJvSns;S5vZG;QhSQKR;7lK;mZLGyDGigINNSgr7GCwP" width="0" height="0" border="0"><br>
-Let local RealtorsÂ® compete for your business. Use HomeGain's free serviceto compare RealtorsÂ® by commission, experience and more. Register to viewhome listings and get RealtorÂ® proposals.</p><p>
-     <a href="http://us01.xmlsearch.findwhat.com/bin/findwhat.dll?clickthrough&amp;y=48504&amp;x=5gqd2;5xCcFKHZRJz8gsEGcwoUHsMKX9D2J2X1InCReNna0td14q;Rb5ZmVJFceBJZcw2y5r5kqrOy5Bq4b;6dqKZdsUSkKcrTgMxTBd4cXAKqctcmq5;T:FKyBhcdW4;k5eod4wzKKswKbVr2haY2Buwcs164Fgv6$$A" onmouseover="window.status='www.pcbexpress.com';return true" onmouseout="window.status='';return true" target="_new">Prototype Circuit Boards From PCBexpress</a>  <img src="http://us01.xmlsearch.findwhat.com/bin/findwhat.dll?SendImpression&amp;d=uFWFASGJCevKW;2Iszf6X9nO10f6ABVNIeuPhTmRciYFgFcOu0AjoTz5IQSlPYWR9tI1b0du1TmLbiDj7Um0WFmsgxM5Ga2nvUYUabxDZeOO19G;VY2;fHxQ0iOzfDWWLJv:RZyWcSOZCxOOFzpyszcPE" width="0" height="0" border="0"><br>
-Two-layer, 20-piece at $11 each, ship in 24-hours. Four-layer, 10-piece at $19 each, ship in 48 hours. No tooling charges for our quality prototype boards. No hassles, easy order process.</p><p>
-
-        </p></td></tr></tbody></table>
-</td></tr></tbody></table>
-          <p>   </p><div align="right" class="note">SPONSORED WEB DIRECTORIES</div>
-     <table cellspacing="1" cellpadding="0" border="0" width="100%" bgcolor="#CCCCCC">
-     <tbody><tr><td align="center" valign="top" bgcolor="#CCCCCC">
-             <table cellspacing="1" cellpadding="5" border="0" width="100%" bgcolor="white">
-             <tbody><tr><td align="left" valign="top">
-     <table width="100%"><tbody><tr><td valign="top">
-     <a href="/common/sponsored_links/books.html">Books</a><br>
-     <a href="/common/sponsored_links/computers.html">Computers</a><br>
-     <a href="/common/sponsored_links/dvds.html">DVDs</a><br>
-     <a href="/common/sponsored_links/electronics.html">Electronics</a><br>
-     </td>
-     <td valign="top">
-     <a href="/common/sponsored_links/entertainment.html">Entertainment</a><br>
-     <a href="/common/sponsored_links/gardening.html">Gardening</a><br>
-     <a href="/common/sponsored_links/gifts.html">Gifts</a><br>
-     <a href="/common/sponsored_links/health.html">Health</a><br>
-
-     </td>
-     <td valign="top">
-     <a href="/common/sponsored_links/hobbies.html">Hobbies</a><br>
-     <a href="/common/sponsored_links/home.html">Home</a><br>
-     <a href="/common/sponsored_links/movies.html">Movies</a><br>
-     <a href="/common/sponsored_links/real%20estate.html">Real Estate</a><br>
-     </td>
-     <td valign="top">
-
-     <a href="/common/sponsored_links/software.html">Software</a><br>
-     <a href="/common/sponsored_links/sports.html">Sports</a><br>
-     <a href="/common/sponsored_links/video%20games.html">Video Games</a><p>
-     </p></td></tr></tbody></table>
-
-             </td></tr></tbody></table>
-     </td></tr></tbody></table>
-
-    </td></tr></tbody></table>
-
+                                 
 
        <!--!!BEGIN_PFRIENDLY-->
        <table width="100%" cellspacing="0" cellpadding="10" border="0">
@@ -460,7 +409,7 @@ friend</a></td><td align="left" valign="top" nowrap=""><img src="/common/templat
                 
 <span class="adhed">ADVERTISEMENT</span>
 <br>
-                <nolayer><iframe src="http://ad.doubleclick.net/adi/cxri.boortz/inside;pg=/inside/privacy.html;mkt=atl;sz=120x400;tile=7;ord=QL5GXQoAAHQAAAQDUPM?" width="120" height="400" frameborder="0" border="0" marginheight="0" marginwidth="0" scrolling="no"><a href="http://ad.doubleclick.net/jump/cxri.boortz/inside;pg=/inside/privacy.html;mkt=atl;sz=120x400;tile=7;ord=QL5GXQoAAHQAAAQDUPM?"><img src="http://ad.doubleclick.net/ad/cxri.boortz/inside;pg=/inside/privacy.html;mkt=atl; sz=120x400;tile=7;ord=QL5GXQoAAHQAAAQDUPM?" height=400 width=120 border="0"></A></iframe></nolayer><ilayer id="ph1204001" visibility="hidden" width="120" height="400"></ilayer>
+                <a href="/"><img src="/includes/ads/inhouse/boortz_madtruth400.gif" width="120" height="400" alt="" border="0"></a>
 
 
 
@@ -483,9 +432,7 @@ Copyright © 2004 Cox Radio Interactive &amp; <a href="http://www.coxradio.com" 
 </tbody></table>
 </td></tr></tbody></table>
 </td></tr></tbody></table>
-<layer src="http://ad.doubleclick.net/adl/cxri.boortz/inside;pg=/inside/privacy.html;mkt=atl;sz=468x60;tile=7;ord=QL5GXQoAAHQAAAQDUPM?" width="468" height="60" visibility="hidden" onload="moveToAbsolute(ph468601.pageX,ph468601.pageY); visibility='show';"></layer> 
- <layer src="http://ad.doubleclick.net/adl/cxri.boortz/inside;pg=/inside/privacy.html;mkt=atl;sz=120x400;tile=7;ord=QL5GXQoAAHQAAAQDUPM?" width="120" height="400" visibility="hidden" onload="moveToAbsolute(ph1204001.pageX,ph1204001.pageY); visibility='show';"></layer>
-
+ 
 
 
 <!--/htdig_noindex-->
