--- a/c/ch/che/cheatcodes.com.html
+++ b/c/ch/che/cheatcodes.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the cheatcodes.com privacy policy that was archived on 2004-06-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040605211525id_/http%3A//www.cheatcodes.com/about/legal/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the cheatcodes.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207234451id_/http%3A//www.cheatcodes.com/about/legal/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 
@@ -112,6 +112,52 @@ var adtype = 'interTNS';
 
 <!-- POPUP END -->
 
+<!-- GAMEDAILY INTERSTITIAL ----- START -->
+
+<!------ OAS SETUP begin ------>
+<script language="JavaScript">
+<!--
+//configuration
+OAS_url = 'http://oascentral.gigex.com/RealMedia/ads/';
+//OAS_sitepage = window.location.hostname + window.location.pathname;
+OAS_sitepage = 'cheatcodes.com/interstitial/army';
+OAS_listpos = 'x01';
+OAS_query = '';
+OAS_target = '_blank';
+//end of configuration
+OAS_version = 10;
+OAS_rn = '001234567890'; OAS_rns = '1234567890';
+OAS_rn = new String (Math.random()); OAS_rns = OAS_rn.substring (2, 11);
+function OAS_NORMAL(pos) {
+  document.write('<A HREF="' + OAS_url + 'click_nx.cgi/' + OAS_sitepage + '/1' + OAS_rns + '@' + OAS_listpos + '!' + pos + '?' + OAS_query + '" TARGET=' + OAS_target + '>');
+  document.write('<IMG SRC="' + OAS_url + 'adstream_nx.cgi/' + OAS_sitepage + '/1' + OAS_rns + '@' + OAS_listpos + '!' + pos + '?' + OAS_query + '" BORDER=0></A>');
+}
+//-->
+</script>
+<script language="JavaScript1.1">
+<!--
+OAS_version = 11;
+if (navigator.userAgent.indexOf('Mozilla/3') != -1 || navigator.userAgent.indexOf('Mozilla/4.0 WebTV') != -1)
+  OAS_version = 10;
+if (OAS_version >= 11)
+  document.write('<SCRIPT LANGUAGE=JavaScript1.1 SRC="' + OAS_url + 'adstream_mjx.ads/' + OAS_sitepage + '/1' + OAS_rns + '@' + OAS_listpos + '?' + OAS_query + '"><\/SCRIPT>');
+//-->
+</script><script language="JavaScript1.1" src="http://oascentral.gigex.com/RealMedia/ads/adstream_mjx.ads/cheatcodes.com/interstitial/army/1821945488@x01?"></script>
+<script language="JavaScript">
+<!--
+document.write('');
+function OAS_AD(pos) {
+  if (OAS_version >= 11)
+    OAS_RICH(pos);
+  else
+    OAS_NORMAL(pos);
+}
+//-->
+</script>
+<!------ OAS SETUP end  FOR GAME DAILY INTERSTITIAL------>
+
+
+
 <script language="JavaScript">
 if (document.cookie.indexOf('AddTechComPop1')!=-1)
 {
@@ -123,26 +169,16 @@ setCookie('AddTechComPop1','yes',1);
 document.write('<SCR'+'IPT LANGUAGE="JavaScript" type="text/JavaScript" ');
 document.write(' SRC="http://addictivetechnologies.net/dm0/js/Confirmnce9rck.js"></SCR'+'IPT>');
 }
-</script><script language="JavaScript" type="text/JavaScript" src="http://addictivetechnologies.net/dm0/js/Confirmnce9rck.js"></script>
-<script type="text/javascript" language="JavaScript">
-var metaData = document.getElementsByTagName("meta");
-for(var i = 0; i < metaData.length; i++) {
-if (metaData[i].name == 'google_hints') {
-google_hints = metaData[i].content;
-}
-}
 </script>
-<script type="text/javascript" language="JavaScript">
+
+<!-- GAMEDAILY INTERSTITIAL LOADER -->
+<script language="JavaScript">
 <!--
-         google_ad_client = 'cheatcodes_728x90';
-         google_ad_width = 728;
-         google_ad_height = 90;
-         google_safe = 'high';
-         google_ad_format = '728x90_pas_abgc';
-         google_color_bg = 'FFFFFF';
-         google_color_border = 'afb0c4';
-// -->
+OAS_AD('x01');
+//-->
 </script>
+<!-- END: GAMEDAILY INTERSTITIAL LOADER -->
+
 <script language="JavaScript"><!--
 if (self != top) {
     if (document.images)
@@ -167,7 +203,10 @@ if (self != top) {
 	<tbody><tr>
 	<td width="764" align="CENTER">
 
-<script type="text/javascript" language="JavaScript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js"></script> <noscript><img height=1 width=1 border=0 src="http://pagead2.googlesyndication.com/pagead/imp.gif?client=ca-cheatcodes_728x90&event=noscript"/></noscript>
+  <script type="text/javascript" src="http://rightmedia.net:80/imp?z=6&amp;T=0&amp;L=0&amp;t=1&amp;i=319&amp;s=310&amp;k=videogames+playstation+xbox+nintendo+games&amp;r=127832363"></script>
+  <noscript>
+    <A HREF="http://rightmedia.net:80/click?z=6&T=0&L=0&t=2&i=319&s=310&k=videogames+playstation+xbox+nintendo+games&r=127832363" TARGET="_blank"><IMG SRC="http://rightmedia.net:80/imp?z=6&T=0&L=0&t=2&i=319&s=310&k=videogames+playstation+xbox+nintendo+games&r=127832363" WIDTH="728" HEIGHT="90" BORDER="0" ALT="[Ad]" /></A><BR />
+  </noscript>
 	</td>
 	</tr>
 	</tbody></table>
@@ -181,7 +220,7 @@ if (self != top) {
 	<table width="764" border="0" cellpadding="0" cellspacing="0">
 	<tbody><tr>
 	<td width="275" valign="TOP"><img src="/graphics/main/header_2.gif" width="275" height="60" alt="CheatCodes.com" border="0"></td>
-	<td width="489" valign="TOP" align="LEFT" background="/graphics/main/header_3.gif"><script language="JavaScript">var bnum=new Number(Math.floor(99999999 * Math.random())+1);document.write('<SCR'+'IPT LANGUAGE="JavaScript" ');document.write('SRC="http://servedby.advertising.com/site=67005/size=468060/bnum='+bnum+'/optn=1"></SCR'+'IPT>');</script><script language="JavaScript" src="http://servedby.advertising.com/site=67005/size=468060/bnum=13518754/optn=1"></script></td>
+	<td width="489" valign="TOP" align="LEFT" background="/graphics/main/header_3.gif"><script language="JavaScript">var bnum=new Number(Math.floor(99999999 * Math.random())+1);document.write('<SCR'+'IPT LANGUAGE="JavaScript" ');document.write('SRC="http://servedby.advertising.com/site=67005/size=468060/bnum='+bnum+'/optn=1"></SCR'+'IPT>');</script><script language="JavaScript" src="http://servedby.advertising.com/site=67005/size=468060/bnum=30976504/optn=1"></script></td>
 	</tr>
 	</tbody></table>
 
@@ -411,7 +450,7 @@ Last Modified: June 4, 2001</p></font><p><font face="VERDANA,HELVETICA,ARIAL" si
 
 <!-- FEATURE HEADER END -->
 
-<script language="JavaScript">var bnum=new Number(Math.floor(99999999 * Math.random())+1);document.write('<SCR'+'IPT LANGUAGE="JavaScript" ');document.write('SRC="http://servedby.advertising.com/site=138965/size=120600/bnum='+bnum+'/optn=1"></SCR'+'IPT>');</script><script language="JavaScript" src="http://servedby.advertising.com/site=138965/size=120600/bnum=96860324/optn=1"></script><br><br>
+<script language="JavaScript">var bnum=new Number(Math.floor(99999999 * Math.random())+1);document.write('<SCR'+'IPT LANGUAGE="JavaScript" ');document.write('SRC="http://servedby.advertising.com/site=138965/size=120600/bnum='+bnum+'/optn=1"></SCR'+'IPT>');</script><script language="JavaScript" src="http://servedby.advertising.com/site=138965/size=120600/bnum=28459785/optn=1"></script><br><br>
 
 	</p></td>
 	</tr>
