--- a/l/li/liv/livephish.com.html
+++ b/l/li/liv/livephish.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the livephish.com privacy policy that was archived on 2004-06-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040613094337id_/http%3A//www.livephish.com/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the livephish.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207234725id_/http%3A//www.livephish.com/privacy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 	<title>livephish.com | PRIVACY POLICY</title>
@@ -512,7 +512,7 @@ If you have any questions or concerns about the LivePhish.com online policy for 
 <a class="footer" href="/support/">CUSTOMER SERVICE</a>
 </p>
 
-<p class="footer" align="center">powered by nugs.net</p>
+<p class="footer" align="center">powered by <a href="http://www.nugs.net/about/" target="_nugs" class="footer">nugs.net</a></p>
 
 
 
