--- a/p/pi/pin/pinellascounty.org.html
+++ b/p/pi/pin/pinellascounty.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the pinellascounty.org privacy policy that was archived on 2004-06-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040605094721id_/http%3A//pinellascounty.org/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the pinellascounty.org privacy policy that was archived on 2004-12-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041208002925id_/http%3A//www.pinellascounty.org/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head><title>Privacy &amp; Security Notice</title>
 <meta content="text/html; charset=windows-1252" http-equiv="Content-Type">
