--- a/n/na/nat/nationalgallery.org.uk.html
+++ b/n/na/nat/nationalgallery.org.uk.html
@@ -1,7 +1,7 @@
-<!--The following is the downloaded HTML source of the nationalgallery.org.uk privacy policy that was archived on 2004-06-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040606075220id_/http%3A//nationalgallery.org.uk/home/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the nationalgallery.org.uk privacy policy that was archived on 2004-12-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041208004353id_/http%3A//www.nationalgallery.org.uk/home/privacy.htm) for the most accurate reproduction.-->
 
-<html><head>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 		<title>NG London/Privacy Statement</title>
 		<meta name="keywords" content="privacy statement">
 		<meta name="author" content="National Gallery | London UK | website@ng-london.org.uk | www.nationalgallery.org.uk">
@@ -37,7 +37,7 @@
 							<tr>
 								<td colspan="2">
 									<form method="GET" action="/cgi-bin/WebObjects.exe/CollectionSearch.woa/wa/newQuery">
-										<input name="searchTerm" size="20" type="TEXT"><span id="submitpadd"><input type="submit" name="searchButton" value="Search"></span>&nbsp;&nbsp;<a class="home" href="/home/siteindex.htm">Site Index</a>
+										<span>Search:&nbsp;</span><input name="searchTerm" size="20" type="TEXT"><span id="submitpadd"><input type="submit" name="searchButton" value="Go"></span>&nbsp;&nbsp;<a class="home" href="/home/siteindex.htm">Site Map</a>
 									</form>
 								</td>
 							</tr>
@@ -79,7 +79,7 @@
 								<a class="sidenav" href="privacy.htm" target="_self">Privacy</a></div>
 							<div class="sidenav35" align="right">
 								<div class="flag">
-									<a href="../plan/language/french.htm" target="_self"><img class="flag" src="/img/france.gif" alt="French"></a><a href="../plan/language/japanese.htm" target="_self"><img src="/img/japan.gif" alt="Japanese" class="flag"></a><a href="../plan/language/italian.htm" target="_self"><img class="flag" src="/img/italy.gif" alt="Italian"></a></div>
+									<a href="../plan/language/french.htm" target="_self"><img class="flag" src="/img/france.gif" alt="French"></a><a href="../plan/language/japanese.pdf" target="_self"><img src="/img/japan.gif" alt="Japanese" class="flag"></a><a href="../plan/language/italian.htm" target="_self"><img class="flag" src="/img/italy.gif" alt="Italian"></a></div>
 								<div class="flag">
 									<a href="../plan/language/spanish.htm" target="_self"><img class="flag" src="/img/spain.gif" alt="Spanish"></a><a href="../plan/language/german.htm" target="_self"><img class="flag" src="/img/german.gif" alt="German"></a><a href="../plan/language/russian.htm" target="_self"><img class="flag" src="/img/russia.gif" alt="Russian"></a></div>
 							</div>
